Bug fix of loader going out of place when reloading

--- a/code/style.css
+++ b/code/style.css
@@ -34,6 +34,7 @@ p {
 }
 
 .killer-deck {
+  position: relative;
   width: 268px;
   height: 400px;
   background: url(./assets/playcard.jpg);
@@ -45,6 +46,7 @@ p {
 }
 
 .weapon-deck {
+  position:relative;
   width: 268px;
   height: 400px;
   background: url(./assets/playcard.jpg);
@@ -56,6 +58,7 @@ p {
 }
 
 .room-deck {
+  position:relative;
   width: 268px;
   height: 400px;
   background: url(./assets/playcard.jpg);
@@ -80,9 +83,9 @@ p {
   border-left: 16px solid #654062;
   width: 75px;
   height: 75px;
-  position: relative;
-  top:33%;
-  left:31%;
+  position: absolute;
+  top:165px;
+  left:83px;
   -webkit-animation: spin 2s infinite;
   animation: spin 2s infinite;
 }
